--- a/devices/templates/devices/device_detail.html
+++ b/devices/templates/devices/device_detail.html
@@ -45,7 +45,12 @@
                rounded-[8px] transition-colors duration-200 
                border border-atb-g-300 bg-white text-atb-g-700 shadow-[0px_1px_2px_0px_#1018280D]
                hover:bg-atb-g-50 hover:text-atb-g-800 
-               focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]">
+               focus:bg-white focus:text-atb-g-700 focus:shadow-[0_0_0_4px_#F2F4F7]"
+                hx-get="{% url 'devices:device-list' %}" 
+                hx-target="#main-content" 
+                hx-swap="innerHTML" 
+                hx-push-url="true"
+                   >
                 Back to List
             </a>
 
@@ -59,7 +64,12 @@
                 {% else %}
                     <a href="{% url 'requests:borrow-request' object.id %}"
                        class="w-full sm:w-fit text-center whitespace-nowrap 
-                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer">
+                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer"
+                hx-get="{% url 'requests:borrow-request' object.id %}" 
+                hx-target="#main-content" 
+                hx-swap="innerHTML" 
+                hx-push-url="true"
+                            >
                         Borrow
                     </a>
                 {% endif %}
@@ -75,7 +85,12 @@
                     {% else %}
                         <a href="{% url 'requests:return-request' object.id %}"
                            class="w-full sm:w-fit text-center whitespace-nowrap 
-                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer">
+                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer"
+                            hx-get="{% url 'requests:return-request' object.id %}" 
+                            hx-target="#main-content" 
+                            hx-swap="innerHTML" 
+                            hx-push-url="true"
+                            >
                             Return
                         </a>
                     {% endif %}
@@ -89,7 +104,12 @@
                     {% else %}
                         <a href="{% url 'requests:borrow-request' object.id %}"
                            class="w-full sm:w-fit text-center whitespace-nowrap 
-                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer">
+                            px-4 sm:px-6 py-2  bg-atb-p-600 rounded-[8px] font-semibold text-white text-[18px] py-2 px-8 hover:bg-atb-p-700 focus:bg-atb-p-600 focus:ring-atb-p-200 focus:outline-none focus:shadow-[0_0_0_4px_#FDE3E6] transition duration-200 cursor-pointer"
+                            hx-get="{% url 'requests:borrow-request' object.id %}" 
+                            hx-target="#main-content" 
+                            hx-swap="innerHTML" 
+                            hx-push-url="true"
+                            >
                             Reserve
                         </a>
                     {% endif %}
